# RBDOOM-3-BFG

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LICENSE_EXCEPTIONS.md  README.md  install-brew.sh  install-deps-linux-arch.sh  install-deps-macos.sh  shadertoolsconfig.json
neo/: CMakeLists.txt  cmake-linux-debug.sh  cmake-linux-release.sh  cmake-linux-vulkan-debug.sh  cmake-linux-vulkan-release.sh  cmake-macos-opengl-debug.sh  cmake-macos-opengl-release.sh  cmake-macos-opengl-retail.sh  cmake-macos-vulkan-debug.sh  cmake-macos-vulkan-release.sh  cmake-macos-vulkan-retail.sh  cmake-vs2017-64bit-windows10-vulkan.bat  cmake-vs2019-64bit-windows10-vulkan.bat  cmake-xcode-opengl-debug.sh  cmake-xcode-opengl-release.sh  cmake-xcode-opengl-universal.sh  cmake-xcode-vulkan-debug.sh  cmake-xcode-vulkan-release.sh  cmake-xcode-vulkan-universal.sh  linux.sh  macos.sh  vs2022-vulkan.bat  vs2022.bat
neo/aas/: AASFile.cpp  AASFile.h  AASFileManager.cpp  AASFileManager.h  AASFile_local.h  AASFile_optimize.cpp  AASFile_sample.cpp
neo/amplitude/: amplitude.cpp
neo/cm/: CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp
neo/d3xp/: AF.cpp  AF.h  AFEntity.cpp  AFEntity.h  Achievements.cpp  Achievements.h  Actor.cpp  Actor.h  AimAssist.cpp  AimAssist.h  BrittleFracture.cpp  BrittleFracture.h  Camera.cpp  Camera.h  EndLevel.cpp  EndLevel.h  Entity.cpp  Entity.h  EnvironmentProbe.cpp  EnvironmentProbe.h  Fx.cpp  Fx.h  Game.h  GameEdit.cpp  GameEdit.h  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  Grabber.h  IK.cpp  IK.h  Item.cpp  Item.h  Leaderboards.cpp  Leaderboards.h  Light.cpp  Light.h  Misc.cpp  Misc.h  (+33 more)
neo/d3xp/ai/: AAS.cpp  AAS.h  AAS_debug.cpp  AAS_local.h  AI.cpp  AI.h  (+5 more)
neo/framework/: BuildVersion.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Common_demos.cpp  Common_dialog.cpp  Common_dialog.h  Common_load.cpp  Common_local.h  Common_localize.cpp  Common_mapconvert.cpp  Common_menu.cpp  Common_network.cpp  Common_printf.cpp  Compressor.cpp  Compressor.h  Console.cpp  Console.h  ConsoleHistory.cpp  ConsoleHistory.h  DebugGraph.cpp  DebugGraph.h  DeclAF.cpp  DeclAF.h  DeclEntityDef.cpp  DeclEntityDef.h  DeclFX.cpp  DeclFX.h  DeclManager.cpp  DeclManager.h  DeclPDA.cpp  DeclPDA.h  DeclParticle.cpp  DeclParticle.h  DeclSkin.cpp  DeclSkin.h  DeclTable.cpp  (+32 more)
neo/idlib/: Base64.cpp  Base64.h  BitMsg.cpp  BitMsg.h  CMakeLists.txt  Callback.h  CmdArgs.cpp  CmdArgs.h  CommandLink.cpp  DataQueue.h  Dict.cpp  Dict.h  Heap.cpp  Heap.h  JSON.cpp  JSON.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  ParallelJobList.cpp  ParallelJobList.h  ParallelJobList_JobHeaders.h  Parser.cpp  Parser.h  RectAllocator.cpp  Scheduler.cpp  Scheduler.h  SoftwareCache.cpp  SoftwareCache.h  Str.cpp  Str.h  StrStatic.h  Swap.h  TaskScheduler.cpp  TaskScheduler.h  (+8 more)
neo/imgui/: BFGimgui.h  BFGimguiImpl.cpp  ImGui_Hooks.h
neo/renderer/: BinaryImage.cpp  BinaryImage.h  BinaryImageData.h  BoundsTrack.cpp  BoundsTrack.h  BufferObject.cpp  BufferObject.h  Cinematic.cpp  Cinematic.h  CmdlineProgressbar.cpp  CmdlineProgressbar.h  CommandBuffer.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Framebuffer_intrinsic.cpp  GLMatrix.cpp  GLMatrix.h  GLState.h  GuiModel.cpp  GuiModel.h  Image.h  ImageManager.cpp  Image_blueNoiseVC_1M.h  Image_brdfLut.h  Image_env_UAC_lobby_amb.h  Image_files.cpp  Image_intrinsic.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  Interaction.cpp  Interaction.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelDecal.cpp  ModelDecal.h  (+62 more)
neo/sound/: CinematicAudio.h  SoundVoice.cpp  SoundVoice.h  WaveFile.cpp  WaveFile.h  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_world.cpp  sound.h
neo/swf/: SWF.h  SWF_Bitstream.cpp  SWF_Bitstream.h  SWF_Dictionary.cpp  SWF_Enums.h  SWF_Events.cpp  SWF_File.cpp  SWF_File.h  SWF_Image.cpp  SWF_Load.cpp  SWF_Main.cpp  SWF_Names.cpp  SWF_ParmList.cpp  SWF_ParmList.h  SWF_PlaceObject.cpp  SWF_Render.cpp  SWF_ScriptFunction.cpp  SWF_ScriptFunction.h  SWF_ScriptObject.cpp  SWF_ScriptObject.h  SWF_ScriptVar.cpp  SWF_ScriptVar.h  SWF_ShapeParser.cpp  SWF_ShapeParser.h  SWF_Shapes.cpp  SWF_Sounds.cpp  SWF_SpriteInstance.cpp  SWF_SpriteInstance.h  SWF_Sprites.cpp  SWF_Sprites.h  SWF_Text.cpp  SWF_TextInstance.cpp  SWF_TextInstance.h  SWF_Types.h  SWF_Zlib.cpp
neo/sys/: LightweightCompression.cpp  LightweightCompression.h  PacketProcessor.cpp  PacketProcessor.h  Snapshot.cpp  Snapshot.h  SnapshotProcessor.cpp  SnapshotProcessor.h  Snapshot_Jobs.cpp  Snapshot_Jobs.h  sys_achievements.cpp  sys_achievements.h  sys_dedicated_server_search.cpp  sys_dedicated_server_search.h  sys_leaderboards.h  sys_lobby.cpp  sys_lobby.h  sys_lobby_backend.h  sys_lobby_backend_direct.cpp  sys_lobby_backend_direct.h  sys_lobby_migrate.cpp  sys_lobby_snapshot.cpp  sys_lobby_users.cpp  sys_local.cpp  sys_local.h  sys_localuser.cpp  sys_localuser.h  sys_profile.cpp  sys_profile.h  sys_public.h  sys_savegame.cpp  sys_savegame.h  sys_session.h  sys_session_callbacks.cpp  sys_session_local.cpp  sys_session_local.h  sys_session_savegames.cpp  sys_session_savegames.h  sys_signin.cpp  sys_signin.h  (+4 more)
neo/tools/: edit_public.h
neo/ui/: BindWindow.cpp  BindWindow.h  ChoiceWindow.cpp  ChoiceWindow.h  DeviceContext.cpp  DeviceContext.h  EditWindow.cpp  EditWindow.h  FieldWindow.cpp  FieldWindow.h  GameBearShootWindow.cpp  GameBearShootWindow.h  GameBustOutWindow.cpp  GameBustOutWindow.h  GameSSDWindow.cpp  GameSSDWindow.h  GuiScript.cpp  GuiScript.h  ListGUI.cpp  ListGUI.h  ListGUILocal.h  ListWindow.cpp  ListWindow.h  Rectangle.h  RegExp.cpp  RegExp.h  RegExp_old.h  RenderWindow.cpp  RenderWindow.h  SimpleWindow.cpp  SimpleWindow.h  SliderWindow.cpp  SliderWindow.h  UserInterface.cpp  UserInterface.h  UserInterfaceLocal.h  Window.cpp  Window.h  Winvar.cpp  Winvar.h
(+473 files in other folders)
